<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TitleActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/message_text"
        android:gravity="center_horizontal"
        android:text="@string/high_low"
        android:fontFamily="@font/castelar"
        android:textColor="#021A6A"
        android:textSize="@dimen/title_text"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:linksClickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/spade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/card_spade" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="189dp"
        android:layout_height="53dp"
        android:text="@string/start"
        android:textSize="@dimen/link_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.75"
        android:onClick="onStart" />

    <TextView
        android:id="@+id/creditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textSize="@dimen/link_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClickCredit"/>

</androidx.constraintlayout.widget.ConstraintLayout>